--- a/surprise.html
+++ b/surprise.html
@@ -457,9 +457,9 @@
     }
     
     .modal-image {
-      width: 90%;
-      max-height: 300px;
-      object-fit: cover;
+      width: 100%;
+      max-height: 350px;
+      object-fit: contain;
       border-radius: 10px;
       margin-bottom: 1.8rem;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
